cmake_minimum_required(VERSION 3.5)

project(1_-_String_Class)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(1_-_String_Class main.cpp)
add_executable(1_-_String_Class_Example2 example2.cpp)
add_executable(1_-_String_Class_Example3 example3.cpp)
add_executable(1_-_String_Class_numberToString numberToString.cpp)
