cmake_minimum_required(VERSION 3.5)

project(1_-_Function_Templates)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(1_-_Function_Templates main.cpp)
add_executable(1_-_Function_Templates2 sort.cpp)
add_executable(1_-_Function_Templates3 search.cpp)
add_executable(1_-_Function_Templates4 print.cpp)
